SprintBoard - fix h-spacing between filters on header

--- a/Satori/Pages/SprintBoard/PersonFilter.razor.css
+++ b/Satori/Pages/SprintBoard/PersonFilter.razor.css
@@ -42,6 +42,10 @@ button {
 .dropdown {
     position: relative;
     display: inline-block;
+    margin-right: 0;
+}
+.avatar-cell {
+    margin-right: 0;
 }
 
 .dropdown-content {
